--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,20 @@
 {% load static %}
 
-<header style="background-color: #a49e86; color: white; font-family: 'Cairo', sans-serif; position: sticky; top: 0; z-index: 999;">
+<header style="background-color: #e9ddcc; color: white; font-family: 'Cairo', sans-serif; position: sticky; top: 0; z-index: 999;">
   <div style="display: flex; justify-content: space-between; align-items: center; padding: 15px 30px; flex-wrap: wrap;">
     
     <!-- ✅ روابط الأقسام -->
     <nav style="display: flex; gap: 30px; font-size: 1rem; flex-wrap: wrap;">
-      <a href="/" style="color: white; text-decoration: none;">الرئيسية</a>
-      <a href="/#محاصيل" style="color: white; text-decoration: none;">المحاصيل</a>
-      <a href="/products/" style="color: white; text-decoration: none;">أدوات القهوة المقطرة</a>
-      <a href="#" style="color: white; text-decoration: none;">بطاقة الإهداء</a>
-      <a href="#" style="color: white; text-decoration: none;">الإكسسوارات</a>
+      <a href="/" style="color: rgb(0, 0, 0); text-decoration: none;">الرئيسية</a>
+      <a href="/#محاصيل" style="color: rgb(0, 0, 0); text-decoration: none;">المحاصيل</a>
+      <a href="/products/" style="color: rgb(0, 0, 0); text-decoration: none;">أدوات القهوة المقطرة</a>
+      <a href="#" style="color: rgb(0, 0, 0); text-decoration: none;">بطاقة الإهداء</a>
+      <a href="#" style="color: rgb(0, 0, 0); text-decoration: none;">الإكسسوارات</a>
     </nav>
 
     <!-- ✅ الشعار -->
     <div style="font-weight: bold; font-size: 1.3rem;">
-      Brü Box ☕
+    BrüBox ☕
     </div>
 
     <!-- ✅ أيقونات الحساب والبحث والسلة -->
@@ -67,7 +67,7 @@
   </div>
 
   <!-- ✅ شريط العروض -->
-  <div style="background-color: #200898; color: white; white-space: nowrap; overflow: hidden;">
+  <div style="background-color: #0d2641  ; color: white; white-space: nowrap; overflow: hidden;">
     <marquee direction="right" scrollamount="4" style="padding: 8px 0;">
       🚧 الموقع تحت الصيانة حاليًا 🚧           🚧 الموقع تحت الصيانة حاليًا  🚧 الموقع تحت الصيانة حاليًا 🚧           🚧 الموقع تحت الصيانة حاليًا
     </marquee>
