--- a/templates/header.html
+++ b/templates/header.html
@@ -14,8 +14,9 @@
 
     <!-- ✅ الشعار (في المنتصف) -->
     <div style="flex: 1; text-align: center;">
-      <a href="/" style="display: inline-block;">
-        <img src="{% static 'image/Bx.png' %}" alt="BrüBox Logo" style="height: 70px;">
+      <a href="/" style="position: absolute; left: 50%; transform: translateX(-50%); display: flex; align-items: center; text-decoration: none;">
+        <img src="{% static 'image/Bx.png' %}" alt="BrüBox Logo" style="height: 80px;">
+      </a>      
       </a>
     </div>
 
@@ -79,3 +80,4 @@
     }
   });
 </script>
+<
